# credit_risk_modeling

./: README.md  pyproject.toml
data/dev/: val.csv
data/prod/: predicoes.csv
notebooks/: calibrate_probabilities.ipynb  feature_engineering.py  first_look.ipynb  james_stein_custom.py  main.ipynb  pipeline_catboost.ipynb  pipeline_main_model.ipynb  pipeline_random_forest.ipynb  report.ipynb  train_test_split.py
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
